--- a/index.html
+++ b/index.html
@@ -15,355 +15,12 @@
         <h1 data-translate="chooseCountry">Choose Your Country</h1>
         <div class="countries-container">
             <div class="country-card" data-country="Spain" data-flag="🇪🇸">
-                <div class="country-flag">🇪🇸</div>
+                 <div class="country-flag">🇪🇸</div>
                 <div class="country-name">Spain</div>
             </div>
             <div class="country-card" data-country="France" data-flag="🇫🇷">
                 <div class="country-flag">🇫🇷</div>
-                <div class="country-name">France</div>
-            </div>
-            <div class="country-card" data-country="Germany" data-flag="🇩🇪">
-                <div class="country-flag">🇩🇪</div>
-                <div class="country-name">Germany</div>
-            </div>
-            <div class="country-card" data-country="United Kingdom" data-flag="🇬🇧">
-                <div class="country-flag">🇬🇧</div>
-                <div class="country-name">United Kingdom</div>
-            </div>
-            <div class="country-card" data-country="Italy" data-flag="🇮🇹">
-                <div class="country-flag">🇮🇹</div>
-                <div class="country-name">Italy</div>
-            </div>
-            <div class="country-card" data-country="Lithuania" data-flag="🇱🇹">
-                <div class="country-flag">🇱🇹</div>
-                <div class="country-name">Lithuania</div>
-            </div>
-            <div class="country-card" data-country="Belgium" data-flag="🇧🇪">
-                <div class="country-flag">🇧🇪</div>
-                <div class="country-name">Belgium</div>
-            </div>
-            <div class="country-card" data-country="Poland" data-flag="🇵🇱">
-                <div class="country-flag">🇵🇱</div>
-                <div class="country-name">Poland</div>
-            </div>
-            <div class="country-card" data-country="Netherlands" data-flag="🇳🇱">
-                <div class="country-flag">🇳🇱</div>
-                <div class="country-name">Netherlands</div>
-            </div>
-            <div class="country-card" data-country="Russia" data-flag="🇷🇺">
-                <div class="country-flag">🇷🇺</div>
-                <div class="country-name">Russia</div>
-            </div>
-            <div class="country-card" data-country="China" data-flag="🇨🇳">
-                <div class="country-flag">🇨🇳</div>
-                <div class="country-name">China</div>
-            </div>
-            <div class="country-card" data-country="USA" data-flag="🇺🇸">
-                <div class="country-flag">🇺🇸</div>
-                <div class="country-name">USA</div>
-            </div>
-            <div class="country-card" data-country="Japan" data-flag="🇯🇵">
-                <div class="country-flag">🇯🇵</div>
-                <div class="country-name">Japan</div>
-            </div>
-            <div class="country-card" data-country="Brazil" data-flag="🇧🇷">
-                <div class="country-flag">🇧🇷</div>
-                <div class="country-name">Brazil</div>
-            </div>
-            <div class="country-card" data-country="India" data-flag="🇮🇳">
-                <div class="country-flag">🇮🇳</div>
-                <div class="country-name">India</div>
-            </div>
-            <div class="country-card" data-country="South Korea" data-flag="🇰🇷">
-                <div class="country-flag">🇰🇷</div>
-                <div class="country-name">South Korea</div>
-            </div>
-            <div class="country-card boss-card" data-country="Roman Empire" data-flag="🏛️">
-                <div class="country-flag">🏛️</div>
-                <div class="country-name">Roman Empire</div>
-            </div>
-            <div class="country-card boss-card" data-country="Mongol Empire" data-flag="🐎">
-                <div class="country-flag">🐎</div>
-                <div class="country-name">Mongol Empire</div>
-            </div>
-            <div class="country-card boss-card" data-country="Ottoman Empire" data-flag="🌙">
-                <div class="country-flag">🌙</div>
-                <div class="country-name">Ottoman Empire</div>
-            </div>
-            <div class="country-card mythic-card" data-country="British Empire" data-flag="👑">
-                <div class="country-flag">👑</div>
-                <div class="country-name">British Empire</div>
-            </div>
-            <div class="country-card superboss-card" data-country="Galactic Federation" data-flag="🌌">
-                <div class="country-flag">🌌</div>
-                <div class="country-name">Galactic Federation</div>
-            </div>
-        </div>
-
-        <!-- World Map -->
-        <div class="map-section">
-            <div class="map-section-title" data-translate="selectOnMap">Or select on the map below</div>
-            <div class="world-map-container">
-                <div id="world-map"></div>
-            </div>
-        </div>
-
-        <button id="start-btn" data-translate="startGame">START GAME</button>
-    </div>
-
-    <!-- Game Screen -->
-    <div id="game-screen">
-        <div class="game-header">
-            <div class="player-info">
-                <span class="player-flag" id="player-flag">🇪🇸</span>
-                <span class="player-country" id="player-country">Spain</span>
-                <span class="team-indicator" id="team-indicator">👥 Team Mode</span>
-            </div>
-            <div class="resources">
-                <div class="resource">
-                    <span class="resource-icon">💰</span>
-                    <span class="resource-value" id="gold-display">1000</span>
-                </div>
-                <div class="resource">
-                    <span class="resource-icon">⚔️</span>
-                    <span class="resource-value" id="army-header-display">10</span>
-                </div>
-                <div class="resource">
-                    <span class="resource-icon">🛡️</span>
-                    <span class="resource-value" id="tanks-header-display">0</span>
-                </div>
-                <div class="resource">
-                    <span class="resource-icon">✈️</span>
-                    <span class="resource-value" id="planes-header-display">0</span>
-                </div>
-                <div class="resource">
-                    <span class="resource-icon">🚢</span>
-                    <span class="resource-value" id="ships-header-display">0</span>
-                </div>
-                <div class="resource">
-                    <span class="resource-icon">🤖</span>
-                    <span class="resource-value" id="drones-header-display">0</span>
-                </div>
-            </div>
-        </div>
-        <div class="game-content">
-            <div class="main-area">
-                <div class="units-grid">
-                    <div class="army-display">
-                        <h2>Soldiers</h2>
-                        <div class="army-count" id="army-display">10</div>
-                        <div class="army-icon">⚔️</div>
-                    </div>
-                    <div class="army-display">
-                        <h2>Tanks</h2>
-                        <div class="army-count" id="tanks-display" style="color: #f39c12;">0</div>
-                        <div class="army-icon">🛡️</div>
-                    </div>
-                    <div class="army-display">
-                        <h2>Planes</h2>
-                        <div class="army-count" id="planes-display" style="color: #3498db;">0</div>
-                        <div class="army-icon">✈️</div>
-                    </div>
-                    <div class="army-display">
-                        <h2>Battleships</h2>
-                        <div class="army-count" id="ships-display" style="color: #9b59b6;">0</div>
-                        <div class="army-icon">🚢</div>
-                    </div>
-                    <div class="army-display" style="grid-column: span 2;">
-                        <h2>Combat Drones</h2>
-                        <div class="army-count" id="drones-display" style="color: #00d4ff;">0</div>
-                        <div class="army-icon">🤖</div>
-                    </div>
-                </div>
-            </div>
-            <div class="right-menu">
-                <button class="menu-btn attack-btn" onclick="openModal('attack')">
-                    <span class="menu-btn-icon">⚔️</span>
-                    Attack
-                </button>
-                <button class="menu-btn" onclick="openModal('shop')">
-                    <span class="menu-btn-icon">🛒</span>
-                    Shop
-                </button>
-                <button class="menu-btn" onclick="openModal('stats')">
-                    <span class="menu-btn-icon">📊</span>
-                    Stats
-                </button>
-                <button class="menu-btn quests-btn" onclick="openModal('quests')">
-                    <span class="menu-btn-icon">📜</span>
-                    Quests
-                </button>
-                <button class="menu-btn" onclick="openModal('settings')">
-                    <span class="menu-btn-icon">⚙️</span>
-                    Settings
-                </button>
-                <button class="menu-btn code-btn" onclick="openModal('code')">
-                    <span class="menu-btn-icon">🎁</span>
-                    Code
-                </button>
-                <button class="menu-btn team-btn" onclick="openModal('team')">
-                    <span class="menu-btn-icon">👥</span>
-                    Teams
-                </button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Shop Modal -->
-    <div class="modal-overlay" id="shop-modal">
-        <div class="modal">
-            <div class="modal-header">
-                <h2>🛒 <span data-translate="shopTitle">Shop</span></h2>
-                <button class="close-btn" onclick="closeModal('shop')">&times;</button>
-            </div>
-
-            <!-- Soldiers -->
-            <div class="shop-item">
-                <div class="shop-item-info">
-                    <span class="shop-item-icon">⚔️</span>
-                    <div>
-                        <div class="shop-item-name" data-translate="soldiers">Soldiers</div>
-                        <div class="shop-item-desc">💰 10 gold each (1 power)</div>
-                    </div>
-                </div>
-                <div class="shop-buy-controls">
-                    <input type="number" id="buy-soldiers" class="shop-qty-input" value="10" min="1" onchange="updateShopCost('soldiers', 10)">
-                    <button class="buy-btn" onclick="buyFromShop('soldiers', 10)">💰 <span id="cost-soldiers">100</span></button>
-                </div>
-            </div>
-
-            <!-- Tanks -->
-            <div class="shop-item" style="border: 2px solid #f39c12;">
-                <div class="shop-item-info">
-                    <span class="shop-item-icon">🛡️</span>
-                    <div>
-                        <div class="shop-item-name" data-translate="tank">Tank</div>
-                        <div class="shop-item-desc">💰 300 gold each (50 power)</div>
-                    </div>
-                </div>
-                <div class="shop-buy-controls">
-                    <input type="number" id="buy-tanks" class="shop-qty-input" value="1" min="1" onchange="updateShopCost('tanks', 300)">
-                    <button class="buy-btn" onclick="buyFromShop('tanks', 300)">💰 <span id="cost-tanks">300</span></button>
-                </div>
-            </div>
-
-            <!-- Planes -->
-            <div class="shop-item" style="border: 2px solid #3498db;">
-                <div class="shop-item-info">
-                    <span class="shop-item-icon">✈️</span>
-                    <div>
-                        <div class="shop-item-name" data-translate="plane">Plane</div>
-                        <div class="shop-item-desc">💰 400 gold each (75 power)</div>
-                    </div>
-                </div>
-                <div class="shop-buy-controls">
-                    <input type="number" id="buy-planes" class="shop-qty-input" value="1" min="1" onchange="updateShopCost('planes', 400)">
-                    <button class="buy-btn" onclick="buyFromShop('planes', 400)">💰 <span id="cost-planes">400</span></button>
-                </div>
-            </div>
-
-            <!-- Battleships -->
-            <div class="shop-item" style="border: 2px solid #9b59b6;">
-                <div class="shop-item-info">
-                    <span class="shop-item-icon">🚢</span>
-                    <div>
-                        <div class="shop-item-name" data-translate="battleship">Battleship</div>
-                        <div class="shop-item-desc">💰 500 gold each (100 power)</div>
-                    </div>
-                </div>
-                <div class="shop-buy-controls">
-                    <input type="number" id="buy-ships" class="shop-qty-input" value="1" min="1" onchange="updateShopCost('ships', 500)">
-                    <button class="buy-btn" onclick="buyFromShop('ships', 500)">💰 <span id="cost-ships">500</span></button>
-                </div>
-            </div>
-
-            <!-- Combat Drones -->
-            <div class="shop-item" style="border: 2px solid #00d4ff;">
-                <div class="shop-item-info">
-                    <span class="shop-item-icon">🤖</span>
-                    <div>
-                        <div class="shop-item-name" data-translate="combatDrone">Combat Drone</div>
-                        <div class="shop-item-desc">💰 700 gold each (150 power)</div>
-                    </div>
-                </div>
-                <div class="shop-buy-controls">
-                    <input type="number" id="buy-drones" class="shop-qty-input" value="1" min="1" onchange="updateShopCost('drones', 700)">
-                    <button class="buy-btn" onclick="buyFromShop('drones', 700)">💰 <span id="cost-drones">700</span></button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Stats Modal -->
-    <div class="modal-overlay" id="stats-modal">
-        <div class="modal">
-            <div class="modal-header">
-                <h2>📊 Stats</h2>
-                <button class="close-btn" onclick="closeModal('stats')">&times;</button>
-            </div>
-            <div class="stat-row">
-                <span class="stat-label">Country</span>
-                <span class="stat-value" id="stat-country">Spain</span>
-            </div>
-            <div class="stat-row">
-                <span class="stat-label">Gold</span>
-                <span class="stat-value" id="stat-gold">1000</span>
-            </div>
-            <div class="stat-row">
-                <span class="stat-label">Army Size</span>
-                <span class="stat-value" id="stat-army">10</span>
-            </div>
-            <div class="stat-row">
-                <span class="stat-label">Tanks</span>
-                <span class="stat-value" id="stat-tanks" style="color: #f39c12;">0</span>
-            </div>
-            <div class="stat-row">
-                <span class="stat-label">Planes</span>
-                <span class="stat-value" id="stat-planes" style="color: #3498db;">0</span>
-            </div>
-            <div class="stat-row">
-                <span class="stat-label">Battleships</span>
-                <span class="stat-value" id="stat-ships" style="color: #9b59b6;">0</span>
-            </div>
-            <div class="stat-row">
-                <span class="stat-label">Combat Drones</span>
-                <span class="stat-value" id="stat-drones" style="color: #00d4ff;">0</span>
-            </div>
-            <div class="stat-row">
-                <span class="stat-label">Total Purchased</span>
-                <span class="stat-value" id="stat-purchased">0</span>
-            </div>
-            <div class="stat-row">
-                <span class="stat-label">Gold Spent</span>
-                <span class="stat-value" id="stat-spent">0</span>
-            </div>
-            <div class="stat-row">
-                <span class="stat-label">Battles Won</span>
-                <span class="stat-value" id="stat-won" style="color: #4CAF50;">0</span>
-            </div>
-            <div class="stat-row">
-                <span class="stat-label">Battles Lost</span>
-                <span class="stat-value" id="stat-lost" style="color: #e74c3c;">0</span>
-            </div>
-        </div>
-    </div>
-
-    <!-- Settings Modal -->
-    <div class="modal-overlay" id="settings-modal">
-        <div class="modal">
-            <div class="modal-header">
-                <h2>⚙️ <span data-translate="settingsTitle">Settings</span></h2>
-                <button class="close-btn" onclick="closeModal('settings')">&times;</button>
-            </div>
-            <div class="setting-row">
-                <span class="setting-label" data-translate="language">Language</span>
-                <select id="language-select" class="language-select" onchange="changeLanguage(this.value)">
-                    <option value="en">🇬🇧 English</option>
-                    <option value="lt">🇱🇹 Lietuviu</option>
-                    <option value="es">🇪🇸 Espanol</option>
-                    <option value="ru">🇷🇺 Russkiy</option>
-                    <option value="de">🇩🇪 Deutsch</option>
-                    <option value="fr">🇫🇷 Francais</option>
+      <option value="fr">🇫🇷 Francais</option>
                 </select>
             </div>
             <div class="setting-row">
@@ -468,6 +125,17 @@
                     <button class="adjust-btn max-btn" onclick="setMaxUnit('drones')">MAX</button>
                 </div>
                 <span class="available">Available: <span id="available-drones">0</span></span>
+            </div>
+
+            <div class="attack-setup-row">
+                <label>Bombs to send: <small>(300 power each)</small></label>
+                <div class="input-group">
+                    <button class="adjust-btn" onclick="adjustUnit('bombs', -1)">-1</button>
+                    <input type="number" id="bombs-input" value="0" min="0" onchange="updateTotalPower()">
+                    <button class="adjust-btn" onclick="adjustUnit('bombs', 1)">+1</button>
+                    <button class="adjust-btn max-btn" onclick="setMaxUnit('bombs')">MAX</button>
+                </div>
+                <span class="available">Available: <span id="available-bombs">0</span></span>
             </div>
 
             <div class="total-power">
